// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col gap-2"
>
  <p>
    Please select your age:
  </p>
  <label
    className="sc-iVxNgP jWHxdf"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-fDXmWF glEgIr"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-kfWwvt bnMwSY"
    >
      <div
        className="sc-gnyVkE ghQUqv"
      />
    </span>
    <span
      className="sc-eHAsqE WvbtS"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-iVxNgP jWHxdf"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-fDXmWF glEgIr"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-kfWwvt bnMwSY"
    >
      <div
        className="sc-gnyVkE ghQUqv"
      />
    </span>
    <span
      className="sc-eHAsqE WvbtS"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-iVxNgP jWHxdf"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-fDXmWF glEgIr"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-kfWwvt bnMwSY"
    >
      <div
        className="sc-gnyVkE ghQUqv"
      />
    </span>
    <span
      className="sc-eHAsqE WvbtS"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-iVxNgP jWHxdf"
>
  <input
    checked={true}
    className="sc-fDXmWF glEgIr"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-kfWwvt bnMwSY"
  >
    <div
      className="sc-gnyVkE ghQUqv"
    />
  </span>
  <span
    className="sc-eHAsqE WvbtS"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-iVxNgP jWHxdf"
>
  <input
    className="sc-fDXmWF glEgIr"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-kfWwvt bnMwSY"
  >
    <div
      className="sc-gnyVkE ghQUqv"
    />
  </span>
  <span
    className="sc-eHAsqE WvbtS"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-iVxNgP jWHxdf"
    htmlFor="button1"
  >
    <input
      className="sc-fDXmWF glEgIr"
      id="button1"
      name="button"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-kfWwvt bnMwSY"
    >
      <div
        className="sc-gnyVkE ghQUqv"
      />
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-2"
  >
    <p>
      Please select your age:
    </p>
    <label
      className="sc-iVxNgP jWHxdf"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-fDXmWF glEgIr"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-kfWwvt bnMwSY"
      >
        <div
          className="sc-gnyVkE ghQUqv"
        />
      </span>
      <span
        className="sc-eHAsqE WvbtS"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-iVxNgP jWHxdf"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-fDXmWF glEgIr"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-kfWwvt bnMwSY"
      >
        <div
          className="sc-gnyVkE ghQUqv"
        />
      </span>
      <span
        className="sc-eHAsqE WvbtS"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-iVxNgP jWHxdf"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-fDXmWF glEgIr"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-kfWwvt bnMwSY"
      >
        <div
          className="sc-gnyVkE ghQUqv"
        />
      </span>
      <span
        className="sc-eHAsqE WvbtS"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
